# Ninetails

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  debug.ps1  run.ps1
doc/: BUILD_SYSTEM.md  INPUT_API.md  OPENGL_API.md  TYPE_SYSTEM.md  WINDOW_API.md
res/: primitive_cube_frg.glsl  primitive_cube_vtx.glsl  quad2d_fragment.glsl  quad2d_vertex.glsl
src/: main.c  main.cpp
src/core/: arena.cpp  arena.h  definitions.h  linear.c  linear.cpp  linear.h  memoryops.c  memoryops.h
src/engine/: objformat.c  objformat.cpp  objformat.h  primitives.h  runtime.c  runtime.cpp  runtime.h
src/engine/renderers/: quad2d.cpp  quad2d.h
src/platform/: filesystem.h  input.h  opengl.h  system.h  window.h
src/platform/win32/: filesystem.c  filesystem.cpp  input.c  inputhandler.c  inputhandler.cpp  inputhandler.h  opengl.c  opengl.cpp  system.cpp  window.c  window.cpp
vnd/handmademath/: HandmadeMath.h
vnd/imgui/: imgui.cpp  imgui_demo.cpp
vnd/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_win32.cpp  imgui_impl_win32.h
